# pythonTutorial

./: .gitignore
agent_demo/: Msg_tutorial.py  Python项目初始化方式详解.md  VOICE_CLONE_README.md  createAgent.py  createReActAgent.py  customeAgent.py  main.py  pyproject.toml  voice_agent.py
agent_demo/tools/: __init__.py  gpt_sovits_tts.py
agent_demo/voice_samples/: .gitkeep
docs/: magic_methods.md  学习进度跟踪.md  异步上下文管理器详解.md  装饰器详解.md
pythonProject/: agentscope_python学习路线.md  data.json  data.pkl  oop_practice.md  yield关键字详解.md  我的_agentscope学习计划.md  环境变量与HTTP_API详解.md  类型注解详解.md
pythonProject/advanced/: _1_exception_io.py  _2_serialization.py  _3_csv_operation.py  _4_excel_operation.py  _5_excel_operation_advanced.py  _6_io_operations.py  _7_os_module.py  __init__.py  data.json  student.csv  test.xls  三国花名册.xlsx
pythonProject/base/: _10_dict.py  _11_function01.py  _11_function01_01.py  _11_function01_02.py  _12_function_application01.py  _13_function_advanced_application01.py  _14_function_advanced_application02.py  _15_oop.py  _16_oop__advanced.py  _17_oop__application.py  _1_variable.py  _2_operators.py  _3_branching_structure.py  _4_circular_structure.py  _5_circular_branch_structure.py  _6_list_struct.py  _7_tuple_struct.py  _8_string.py  _9_set.py  __init__.py
pythonProject/http_env_config/: .env.development  .env.testing  _01_http_get.py  _02_env_example.py  _03_env-file_manager.py  _04_env_load.py  _05_config_pattern.py  _06_config_priority.py  config.json
pythonProject/http_examples/: _01_env.py  _02_env_example.py
pythonProject/tutorial/: __init__.py  (+1 more)
(+6 files in other folders)
